feat(state): add Redux store and basic form slice; feat(create): add 'Add text field' button and list

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# env files
+.env
+.env.*.local
+
+# test & coverage
+coverage/
+
+# build caches
+.vite/
+.eslintcache
+*.tsbuildinfo
